Laboratorium/Lab10/kubernetes/my-nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-nginx-deployment
  labels:
    component: frontend
    app: my-app

spec:
  template:
    metadata:
      name: my-nginx-pod
      labels:
        component: frontend
        app: my-app
    spec:
      containers:
        - name: my-nginx-container
          image: januszsch/myfrontend-nginx:latest
  
  replicas: 1
  selector:
    matchLabels:
      app: my-app
      component: frontend
