Laboratorium/Lab10/kubernetes/my-nginx-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-nginx-clusterip
 
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  
  selector:
    component: frontend
    app: my-app
