Laboratorium/Lab10/kubernetes/my-nginx-node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-nginx-node-port

spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 33000

  selector:
    component: frontend
    app: my-app
