Laboratorium/Lab10/kubernetes/mybackend-simple-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: mybackend-simple-clusterip

spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000

  selector:
    component: backend
    app: my-app
