Laboratorium/Lab10/kubernetes/mybackend-simple-node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: mybackend-simple-node-port

spec:
  type: NodePort
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 32000

  selector:
    component: backend
    app: my-app
