Laboratorium/Lab10/kubernetes/my-ingress.yaml
apiVersion: extensions/v1beta1

kind: Ingress

metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
  rules:
    - http:
        paths:
          - path: /api/?(.*)
            backend: 
              serviceName: mybackend-simple-clusterip
              servicePort: 5000
          - path: /?(.*)
            backend:
              serviceName: my-nginx-clusterip
              servicePort: 80
